--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,23 @@
 @layer components {
   /* Container */
   .container-custom {
-    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+    @apply mx-auto px-4 sm:px-6 lg:px-8;
+    max-width: 100%;
+    width: 100%;
+  }
+  
+  @media (min-width: 1280px) {
+    .container-custom {
+      max-width: 1280px;
+    }
+  }
+  
+  @media (min-width: 1536px) {
+    .container-custom {
+      max-width: 1536px;
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
   }
   
   /* Buttons */
